Set the z-index of settings delete/add buttons to ensure accessibility across browsers (thanks to Dave Johnson) [#159 state:closed]
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@965 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/core/ui/styles/admin.css
+++ b/core/ui/styles/admin.css
@@ -6,7 +6,7 @@ body { position:relative; }
 .shopp .clickable,
 .shopp button { cursor:pointer; }
 .shopp button.deleteButton { background:none;border:none;padding:0;width:16px;height:16px; }
-.shopp button.delete,.shopp button.add { display:inline-block;background:none;border:none;padding:3px;margin:1px; }
+.shopp button.delete,.shopp button.add { display:inline-block;background:none;border:none;padding:3px;margin:1px;z-index:100; }
 .shopp button img { display:inline;vertical-align:middle; }
 .shopp input.right { text-align:right; }
 .shopp label .error { display:inline-block;margin-top:5px;padding:0 0.6em; }
